[package]
name = "angled-random-walker-demo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
angled-random-walker = "0.4.4" 
wasm-bindgen = "0.2.92"
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_xoshiro = "0.6.0"
stackblur-iter = "0.2.0"
